--- a/simple g++ makefile/Makefile
+++ b/simple g++ makefile/Makefile
@@ -1,8 +1,8 @@
 compile-files:
-	@find -name "*.cpp" -not -name "main.cpp" -print0 | xargs -0 g++ -c
+	@find -name "*.cpp" -not -name "main.cpp" -print0 | xargs -0 g++ -c >/dev/null 2>&1 || true 
 	
 compile-main:
-	@g++ main.cpp *.o -o main
+	@g++ main.cpp *.o -o main >/dev/null 2>&1 || g++ main.cpp -o main
 
 compile:
 	@make compile-files
